--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   numberpicker: ^2.1.1
   geolocator: ^9.0.2
   dropdown_button2: ^1.8.9
+  sensors_plus: ^2.0.1
 
 dev_dependencies:
   flutter_test:
