--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.17.0
   csv: ^5.0.1
   clipboard: ^0.1.3
+  http: ^0.13.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
